# src/swagger_output.json
@@ -20,6 +20,9 @@
   "paths": {
     "/api/users": {
       "post": {
+        "tags": [
+          "user"
+        ],
         "description": "",
         "parameters": [
           {
@@ -54,17 +57,26 @@
         }
       },
       "get": {
+        "tags": [
+          "user"
+        ],
         "description": "",
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
     "/api/session": {
       "post": {
+        "tags": [
+          "user"
+        ],
         "description": "",
         "parameters": [
           {
@@ -95,6 +107,9 @@
     },
     "/api/permissions": {
       "post": {
+        "tags": [
+          "permission"
+        ],
         "description": "",
         "parameters": [
           {
@@ -116,10 +131,16 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
       "get": {
+        "tags": [
+          "permission"
+        ],
         "description": "",
         "parameters": [],
         "responses": {
@@ -134,6 +155,9 @@
     },
     "/api/roles": {
       "post": {
+        "tags": [
+          "role"
+        ],
         "description": "",
         "parameters": [
           {
@@ -158,10 +182,16 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
       "get": {
+        "tags": [
+          "role"
+        ],
         "description": "",
         "parameters": [],
         "responses": {
